Bug 164014 - Some AutoFilter information gets lost after saving/reopening - data corruption experienced
Summary: Some AutoFilter information gets lost after saving/reopening - data corruptio...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.3.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:26.2.0 target:25.8.1 target:25...
Keywords:
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2024-11-23 21:30 UTC by Hannes R.
Modified: 2025-08-08 19:38 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Document with AutoFilter (20.34 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-11-23 21:31 UTC, Hannes R.
Details
Sample file, recreated filter. (24.18 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-11-23 23:20 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hannes R. 2024-11-23 21:30:37 UTC
Description:
Saving a document with data filtered could lead to an inconsistent state where filtered data is shown, but clearing the filter will remove all results. It seems that the set filters are lost somewhere between saving and reopening Calc.

At some point I noticed that even all of my column headers had been replaced with the same headers in my original document, indicating possible data corruption. However I do not know how to reproduce this result.

Steps to Reproduce:
1. Open the attached file.
2. Set the filter in column B to "32"
3. Save the document. Close Calc.
4. Open the document again. Now deselect some item in the filter for column A.
5. Save the document again. Close Calc.
6. Open the document again, it is broken now.

Actual Results:
Clearing the filter in column A will remove all results. You can see that the filter for column B is still active, but "32" is no longer selected.

Expected Results:
Clearing the filter in column A should show all entries with "32" in column B.


Reproducible: Sometimes


User Profile Reset: No

Additional Info:
Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: de-AT (de_AT); UI: en-US
Calc: threaded
Comment 1 Hannes R. 2024-11-23 21:31:51 UTC
Created attachment 197752 [details]
Document with AutoFilter
Comment 2 m_a_riosv 2024-11-23 23:20:43 UTC
Created attachment 197753 [details]
Sample file, recreated filter.

I think there were two different filters, not one.

Recreated the filter, please test.
Comment 3 Hannes R. 2024-11-23 23:31:59 UTC
(In reply to m_a_riosv from comment #2)
> Created attachment 197753 [details]
> Sample file, recreated filter.
> 
> I think there were two different filters, not one.
> 
> Recreated the filter, please test.

Same issue with your file using the same steps.
Comment 4 mikhail.machine 2025-06-11 08:18:25 UTC
Hello Hannes R.,

Thank you for reporting the bug. I can confirm that the bug is present in master.

Version: 25.2.2.2 (X86_64) / LibreOffice Community
Build ID: 7370d4be9e3cf6031a51beef54ff3bda878e3fac
CPU threads: 12; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2025-07-19 11:28:54 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02431246070d3468a0360b212f96a4ea75cac52c

tdf#164014: export value filters through the value property to ODS

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-08-07 14:59:22 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/b3715bd480b44dfedb48b5f3a6ce6a5e2f3d431e

tdf#164014: export value filters through the value property to ODS

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-08-08 19:38:06 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/812e0051f5d2d9f005ce45e8798835497c182a17

tdf#164014: export value filters through the value property to ODS

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-08-08 19:38:09 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/422fbf13dbc31a77a07cd4135e39418e912d8926

tdf#164014: sc: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.