tdf#164014: export value filters through the value property to ODS

Change-Id: Ia6f8a2d65d1f90488ae1c8d2ca5bb48fc772464d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188061
Tested-by: Jenkins
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>